Add anchors to Vienna.html, faq.html and intro.html pages
hiutil complains if it cannot find an identifier in the HTML pages.

--- a/Vienna Help/Resources/es.lproj/intro.html
+++ b/Vienna Help/Resources/es.lproj/intro.html
@@ -8,7 +8,7 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Introducción a Vienna</span>
+  <a id="intro-page" name="intro-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Introducción a Vienna</span>
   <p>Vienna es una aplicación que le permite leer las fuentes de noticias RSS o Atom en su ordenador con Mac OS X. Automatiza el trabajo de conseguir artículos de noticias de todas las fuentes suscritas y las guarda en una base de datos local, lo que permite que los artículos también puedan ser leídos cuando no hay disponible una conexión a la red. Asimismo incluye opciones de búsqueda que le permiten buscar palabras o frases clave en los artículos, marcar artículos con un indicador para tener referencias u organizar las fuentes de artículos relacionadas en grupos. También puede crear carpetas inteligentes que obtienen y muestran de manera fácil y dinámica los artículos en función de un determinado criterio de búsqueda. El navegador integrado - dotado con un sistema de pestañas - le permite ver los artículos o enlaces de las páginas web desde el mismo Vienna.</p>
   <p>Vienna está diseñado para ofrecer una gran facilidad de uso. Posee una interfaz limpia y sencilla que maximiza el espacio para los artículos. Y apenas se necesitan unos pocos controles para llevar a cabo las acciones más frecuentes.</p>
   <p><b>Primeros pasos</b></p>
