--- a/Vienna Help/Resources/fr.lproj/Vienna.html
+++ b/Vienna Help/Resources/fr.lproj/Vienna.html
@@ -10,6 +10,7 @@
   <title>Aide Vienna</title>
 </head>
 <body>
+  <a id="title-page" name="title-page"></a>
   <table border="0" cellspacing="10" width="100%">
     <tbody>
       <tr>
