--- a/Vienna Help/Resources/fr.lproj/faq.html
+++ b/Vienna Help/Resources/fr.lproj/faq.html
@@ -8,7 +8,7 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Comment faire ?</span>
+  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Comment faire ?</span>
   <p>Ci-dessous vous trouverez les questions les plus courantes à propos de Vienna lors de sa phase de beta-test. Reportez-vous à la page <a href="http://www.vienna-rss.com/vienna_faq.html">Official Vienna FAQ</a> (en anglais) pour les dernières astuces pour utiliser Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">J'ai rencontré un problème avec Vienna. Comment faire un rapport ?</a></li>
