--- a/Vienna Help/Resources/fr.lproj/intro.html
+++ b/Vienna Help/Resources/fr.lproj/intro.html
@@ -8,7 +8,7 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Introduction à Vienna</span>
+  <a id="intro-page" name="intro-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Introduction à Vienna</span>
   <p>Vienna est une application qui permet de lire des flux RSS ou Atom sur les systèmes Mac OS X. Il automatise la récupération des nouveaux articles pour tous les abonnements auxquels vous aurez souscrit et les stocke dans une base de données locale pour une lecture hors-ligne. Il fournit des fonctions permettant de rechercher parmi les flux via des mots-clés ou des phrases, de marquer des articles pour un référencement ultérieur et d'organiser des flux ensemble à travers des groupes. Vous pouvez créer des dossiers intelligents qui rendent aisé de retrouver et consulter dynamiquement tous les articles de la base qui satisfont des critères de sélection. Le navigateur internet intégré permet d'afficher dans un onglet séparé, la page web des articles ou les liens présents dans les articles.</p>
   <p>Vienna est conçu pour être simple et facile à utiliser. Une interface propre et dépouillée maximise l'espace pour les articles, et seules quelques commandes sont nécessaires pour effectuer les actions les plus courantes dans l'interface utilisateur.</p>
   <p><b>Pour démarrer</b></p>
