--- a/Vienna Help/Resources/it.lproj/faq.html
+++ b/Vienna Help/Resources/it.lproj/faq.html
@@ -8,7 +8,7 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Come Faccio A?</span>
+  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Come Faccio A?</span>
   <p>Qui sotto ci sono alcune delle domande più comuni che ci sono state fatte su Vienna mentre veniva effettuato il test pre-rilascio. Vai alla <a href="http://www.vienna-rss.com/vienna_faq.html">Pagina FAQ Ufficiale di Vienna</a> per questi e i più recenti trucchi e suggerimenti per usare Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">Ho trovato un problema in Vienna. Come lo segnalo?</a></li>
