--- a/Vienna Help/Resources/it.lproj/intro.html
+++ b/Vienna Help/Resources/it.lproj/intro.html
@@ -8,7 +8,7 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Introduzione a Vienna</span>
+  <a id="intro-page" name="intro-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Introduzione a Vienna</span>
   <p>Vienna è un'applicazione che ti permette di leggere feed di notizie in formato RSS o Atom sul tuo computer con Mac OSX. Automatizza il compito di recuperare i nuovi articoli da tutti i feed cui si è iscritti e di memorizzarli in un database locale per leggerli quando si è off-line. Fornisce caratteristiche che ti permettono di cercare nei feed per parole chiave o frasi, segnalare gli articoli con contrassegno per riferimento futuro ed organizzare insieme in gruppi i feed correlati. Puoi creare cartelle smart che rendano semplice recuperare e visualizzare tutti gli articoli nel database che soddisfino un dato criterio di ricerca. Il browser interno ti permette di andare alla pagina web degli articoli direttamente all'interno di Vienna su pannelli separati.</p>
   <p>Vienna è progettato in modo da essere semplice e facile da utilizzare. Un'interfaccia pulita e ordinata massimizza lo spazio per gli articoli e solo pochi pulsanti sono necessari per eseguire la maggior parte delle operazioni nell'interfaccia utente.</p>
   <p><b>Come Iniziare</b></p>
