--- a/Vienna Help/Resources/nl.lproj/intro.html
+++ b/Vienna Help/Resources/nl.lproj/intro.html
@@ -8,7 +8,7 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Inleiding</span>
+  <a id="intro-page" name="intro-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Inleiding</span>
   <p>Vienna is een programma waarmee u RSS en Atom feeds kunt lezen op uw Mac OS X computer. Het automatiseert het ophalen van nieuwe artikelen van uw abonnementen en bewaart deze in een lokale database zodat u hen ook offline kan lezen. U kunt artikelen doorzoeken op sleutelwoorden, markeren voor later en feeds organiseren in mappen. U kunt slimme mappen aanmaken die het eenvoudig maken om automatisch artikelen bij elkaar te groeperen gebaseerd op zoekcriteria. De ingebouwde webbrowser geeft u de mogelijkheid om de webpagina's van de artikelen te bekijken of om links te volgen in aparte tabbladen.</p>
   <p>Vienna is ontworpen met als doel eenvoud. Veel ruimte voor uw nieuws en een simpele bediening.</p>
   <p><b>Beginnen met Vienna</b></p>
