--- a/Vienna Help/Resources/zh-Hant.lproj/faq.html
+++ b/Vienna Help/Resources/zh-Hant.lproj/faq.html
@@ -8,7 +8,7 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">我該怎麼做？</span>
+  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">我該怎麼做？</span>
   <p>Below are some of the more common questions asked about Vienna while it was being pre-release tested. 您可以瀏覽 <a href="http://www.vienna-rss.com/vienna_faq.html">Vienna 官方 FAQ 網頁</a>，查看最新的 Vienna 使用技巧。</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">I found a problem with Vienna. How do I report it?</a></li>
