--- a/Vienna Help/Resources/da.lproj/intro.html
+++ b/Vienna Help/Resources/da.lproj/intro.html
@@ -8,7 +8,7 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Introduction to Vienna</span>
+  <a id="intro-page" name="intro-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Introduction to Vienna</span>
   <p>Vienna is an application that allows you to read RSS or Atom news feeds on your Mac OS X computer. It automates the job of retrieving news articles from all subscribed feeds and storing them in a local database for reading off-line. It provides features that allow you to search feeds for keywords or phrases, tag articles with a flag for future reference and organise related feeds together under groups. You can create smart folders that make it easy to dynamically retrieve and view all articles in the database that match a search criteria. The built-in web browser allows you to go to the articles web page or view links in the article directly in Vienna in separate tabs.</p>
   <p>Vienna is designed to be simple and easy to use. A clean, uncluttered, interface maximises the space for articles and just a few controls are needed to perform the most common actions in the user interface.</p>
   <p><b>Getting Started</b></p>
