--- a/Vienna Help/Resources/de.lproj/intro.html
+++ b/Vienna Help/Resources/de.lproj/intro.html
@@ -8,7 +8,7 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Einleitung zu Vienna</span>
+  <a id="intro-page" name="intro-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Einleitung zu Vienna</span>
   <p>Vienna ist ein Programm zum lesen und verwalten von RSS und Atom Feeds auf Mac OSX Computern. Es automatisiert Aufgaben zum verwalten von Atikeln der abonnierten Feeds und speichert sie in einer lokalen Datenbank um die Artikel auch Offline lesen zu können. Unterstützte Merkmale sind das Durchsuchen der Feeds nach Schlüsselwörtern und Phrasen, makieren ineressanter Artikel und zusammenfassen von Feeds in Gruppen. Sie können intelligente Ordner erstellen, die Artikel mit den von ihnen festgelegten Eigenschaften enthalten. Mit dem intekrierten Browser werden die Artikel Web-Seiten und Links direkt im Programm in Tabs dargestelllt.</p>
   <p>Vienna ist für eine einfache Nutzung konzipiert und besitzt eine optimierte Oberfläche für eine bessere Übersicht und Kontrolle. A clean, uncluttered, interface maximises the space for articles and just a few controls are needed to perform the most common actions in the user interface.</p>
   <p><b>Getting Started</b></p>
