--- a/Vienna Help/Resources/es.lproj/faq.html
+++ b/Vienna Help/Resources/es.lproj/faq.html
@@ -8,7 +8,7 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">¿Cómo puedo...?</span>
+  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">¿Cómo puedo...?</span>
   <p>Le presentamos algunas de las preguntas más frecuentes acerca de Vienna. Consulte el <a href="http://www.vienna-rss.com/vienna_faq.html">F.A.Q. oficial</a> para obtener respuestas más concretas y, obviamente, también los últimos consejos prácticos para el uso de Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">He apreciado un problema en Vienna. ¿Cómo informo de ello?</a></li>
