--- a/Vienna Help/Resources/nl.lproj/faq.html
+++ b/Vienna Help/Resources/nl.lproj/faq.html
@@ -8,7 +8,7 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Hoe kan ik?</span>
+  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Hoe kan ik?</span>
   <p>Hier zijn een aantal vragen die naar voren kwamen tijdens de ontwikkeling van Vienna in de test-fase. Kijk hiervoor op <a href="https://www.vienna-rss.com/faq">Official Vienna FAQ Page</a> en de laatste hints en tips voor Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">Ik heb een probleem gevonden in Vienna. Hoe kan ik dit melden?</a></li>
