Add descriptions/summaries to Vienna Help pages
The summary will be shown when in the search results of the help viewer. I reused the phrases on the title page (Vienna.html) with some modifications to make it clear that the entry refers to Vienna.

--- a/Vienna Help/Resources/fr.lproj/keyboard.html
+++ b/Vienna Help/Resources/fr.lproj/keyboard.html
@@ -5,6 +5,7 @@
 <head>
   <title>Raccourcis clavier</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="description" content="Discover keyboard shortcuts for common commands in Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
