--- a/Vienna Help/Resources/en.lproj/advanced.html
+++ b/Vienna Help/Resources/en.lproj/advanced.html
@@ -5,6 +5,7 @@
 <head>
   <title>Advanced Settings</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="description" content="Explains advanced settings in Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
