--- a/Vienna Help/Resources/es.lproj/keyboard.html
+++ b/Vienna Help/Resources/es.lproj/keyboard.html
@@ -5,6 +5,7 @@
 <head>
   <title>Funciones rápidas de teclado</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="description" content="Discover keyboard shortcuts for common commands in Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
