--- a/Vienna Help/Resources/it.lproj/faq.html
+++ b/Vienna Help/Resources/it.lproj/faq.html
@@ -3,8 +3,9 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Come Faccio A?</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="description" content="Frequently asked questions about Vienna, getting support and troubleshooting steps." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
