Import translations from Crowdin

--- a/Vienna Help/Resources/de.lproj/advanced.html
+++ b/Vienna Help/Resources/de.lproj/advanced.html
@@ -5,7 +5,7 @@
 <head>
   <title>Erweiterte Einstellingen</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Explains advanced settings in Vienna." />
+  <meta name="description" content="Erläutert die erweiterten Einstellungen für Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
