--- a/Vienna Help/Resources/fr.lproj/keyboard.html
+++ b/Vienna Help/Resources/fr.lproj/keyboard.html
@@ -5,7 +5,7 @@
 <head>
   <title>Raccourcis clavier</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Discover keyboard shortcuts for common commands in Vienna." />
+  <meta name="description" content="Découvrez les raccourcis claviers pour accéder aux fonctionnalités courantes de Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -57,11 +57,11 @@
     </tr>
     <tr>
       <td>&lt;</td>
-      <td>Affiche l'article ou la page web précédent.</td>
+      <td>Affiche l'article précédent de l'historique de lecture.</td>
     </tr>
     <tr>
       <td>&gt;</td>
-      <td>Affiche l'article ou la page web suivant.</td>
+      <td>Affiche l'article suivant de l'historique de lecture.</td>
     </tr>
     <tr>
       <td>Gauche</td>
@@ -69,14 +69,14 @@
     </tr>
     <tr>
       <td>Barre d'espace</td>
-      <td>Passe au prochain article non lu, à moins qu'il reste du texte à afficher pour l'article en cours ; dans ce cas, on affiche la page de texte suivante.</td>
+      <td>Passe au prochain article non lu, à moins qu'il reste du texte à afficher pour l'article en cours&nbsp;; dans ce cas, on affiche la page de texte suivante.</td>
     </tr>
     <tr>
       <td>Entrée <i>ou</i> Return</td>
       <td>Ouvre la page web source de l'article sélectionné.</td>
     </tr>
     <tr>
-      <td>Suppr <i>ou</i> Backspace</td>
+      <td>Suppr <i>ou</i> Retour arrière</td>
       <td>Déplace les articles sélectionnés dans la corbeille. Lorsque cette commande est utilisée à partir de la corbeille, les articles sélectionnés sont définitivement détruits.</td>
     </tr>
     <tr>
@@ -84,11 +84,11 @@
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>Alt-Click</td>
+      <td>Option-Clic</td>
       <td>Ouvre la page originelle de l'article dans un onglet sans tenir compte des préférences pour ouvrir les liens dans un navigateur externe.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-B</td>
+      <td>Majuscule-⌘-B</td>
       <td>Affiche la barre de filtre.</td>
     </tr>
     <tr>
@@ -96,19 +96,19 @@
       <td>Crée un nouvel abonnement.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-G</td>
+      <td>Majuscule-⌘-G</td>
       <td>Crée un nouveau groupe.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-F</td>
+      <td>Majuscule-⌘-F</td>
       <td>Crée un nouveau groupe intelligent.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-E</td>
+      <td>Majuscule-⌘-E</td>
       <td>Modifie l'adresse URL du dossier sélectionné ou modifie les critères du dossier intelligent sélectionné.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-D</td>
+      <td>Majuscule-⌘-D</td>
       <td>Supprime le groupe sélectionné.</td>
     </tr>
     <tr>
@@ -120,7 +120,7 @@
       <td>Masque Vienna.</td>
     </tr>
     <tr>
-      <td>Alt-⌘-H</td>
+      <td>Option-⌘-H</td>
       <td>Masque toutes les applications sauf Vienna.</td>
     </tr>
     <tr>
@@ -129,10 +129,10 @@
     </tr>
     <tr>
       <td>⌘-L</td>
-      <td>Sélectionne le champ d'adresse du navigateur de l'onglet actuel ; ouvre un nouvel onglet avec un navigateur si besoin.</td>
+      <td>Sélectionne le champ d'adresse du navigateur de l'onglet actuel&nbsp;; ouvre un nouvel onglet avec un navigateur si besoin.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-N</td>
+      <td>Majuscule-⌘-N</td>
       <td>Renomme le dossier sélectionné.</td>
     </tr>
     <tr>
@@ -140,7 +140,7 @@
       <td>Rafraîchit tous les abonnements.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-R</td>
+      <td>Majuscule-⌘-R</td>
       <td>Rafraîchit uniquement les abonnements sélectionnés dans la liste des dossiers.</td>
     </tr>
     <tr>
@@ -152,7 +152,7 @@
       <td>Imprime les articles sélectionnés.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-P</td>
+      <td>Majuscule-⌘-P</td>
       <td>Affiche la fenêtre de mise en page.</td>
     </tr>
     <tr>
@@ -172,8 +172,8 @@
       <td>Annule l'action précédente si c'est possible.</td>
     </tr>
     <tr>
-      <td>Command-/</td>
-      <td>Toggles the status bar on or off.</td>
+      <td>⌘-: (deux-points)</td>
+      <td>Afficher ou masquer la barre de statut.</td>
     </tr>
     <tr>
       <td>⌘-+ (plus)</td>
@@ -188,7 +188,7 @@
       <td>Affiche le panneau des préférences.</td>
     </tr>
     <tr>
-      <td>Alt-⌘-BackSpace</td>
+      <td>Option-⌘-Retour arrière</td>
       <td>Vide la corbeille après demande de confirmation.</td>
     </tr>
     <tr>
@@ -204,35 +204,35 @@
       <td>Ouvre la page originelle de l'article dans un onglet sans tenir compte des préférences pour ouvrir les liens dans un navigateur externe.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-Z</td>
+      <td>Majuscule-⌘-Z</td>
       <td>Rétablit la dernière action si elle vient juste d'être annulée.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-M</td>
+      <td>Majuscule-⌘-M</td>
       <td>Marque d'un drapeau les articles sélectionnés.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-U</td>
+      <td>Majuscule-⌘-U</td>
       <td>Marque les articles sélectionnés comme étant lus.</td>
     </tr>
     <tr>
-      <td>Alt-⌘-S</td>
+      <td>Option-⌘-S</td>
       <td>Ouvre l'application de messagerie par défaut et crée un courrier avec un lien vers l'article actuel.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-S</td>
+      <td>Majuscule-⌘-S</td>
       <td>Marque tous les articles du dossier actuel comme étant lus et passe au prochain dossier ayant des articles non lus.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-O</td>
+      <td>Majuscule-⌘-O</td>
       <td>Rétablit un article de la corbeille dans son dossier d'origine.</td>
     </tr>
     <tr>
-      <td>Shift-⌘-K</td>
+      <td>Majuscule-⌘-K</td>
       <td>Marque tous les articles des dossiers sélectionnés comme étant lus.</td>
     </tr>
     <tr>
-      <td>Alt-⌘-K</td>
+      <td>Option-⌘-K</td>
       <td>Marque tous les articles de tous les dossiers comme étant lus.</td>
     </tr>
     <tr>
@@ -241,18 +241,18 @@
     </tr>
     <tr>
       <td>⌘-W</td>
-      <td>Ferme l'onglet actif si plusieurs sont ouverts ; sinon, ferme la fenêtre Vienna.</td>
+      <td>Ferme l'onglet actif si plusieurs sont ouverts&nbsp;; sinon, ferme la fenêtre Vienna.</td>
     </tr>
     <tr>
-      <td>Alt-⌘-W</td>
-      <td>Ferme tous les onglets autres que la liste des articles. Note : cette commande remplace la commande "Fermer l'onglet" dans le menu Fichier lorsque la touche Alt est pressée.</td>
+      <td>Option-⌘-W</td>
+      <td>Ferme tous les onglets autres que la liste des articles. Note&nbsp;: cette commande remplace la commande "Fermer l'onglet" dans le menu Fichier lorsque la touche Alt est pressée.</td>
     </tr>
     <tr>
-      <td>Alt-⌘-Gauche</td>
+      <td>Option-⌘-Gauche</td>
       <td>Affiche l'onglet précédent.</td>
     </tr>
     <tr>
-      <td>Alt-⌘-Droite</td>
+      <td>Option-⌘-Droite</td>
       <td>Affiche l'onglet suivant.</td>
     </tr>
     <tr>
@@ -268,11 +268,11 @@
       <td>Affiche la fenêtre l'activité.</td>
     </tr>
     <tr>
-      <td>⌘-1</td>
+      <td>⌘-&amp;</td>
       <td>Réaffiche la fenêtre Vienna si celle-ci a été préalablement fermée.</td>
     </tr>
     <tr>
-      <td>⌘-2</td>
+      <td>⌘-é</td>
       <td>Affiche la fenêtre de téléchargement.</td>
     </tr>
     <tr>
@@ -280,11 +280,11 @@
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>Alt-R</td>
+      <td>Option-R</td>
       <td>Recharge la page web active.</td>
     </tr>
     <tr>
-      <td>⌘-. (point)</td>
+      <td>⌘-; (point-virgule)</td>
       <td>Arrête le chargement de la page web active.</td>
     </tr>
     <tr>
@@ -292,7 +292,7 @@
       <td>Affiche la page web précédente.</td>
     </tr>
     <tr>
-      <td>⌘-] <i>ou</i> ⌘-Droite</td>
+      <td>⌘-$ <i>ou</i> ⌘-Droite</td>
       <td>Affiche la page web suivante.</td>
     </tr>
     <tr>
