--- a/Vienna Help/Resources/nl.lproj/keyboard.html
+++ b/Vienna Help/Resources/nl.lproj/keyboard.html
@@ -3,7 +3,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Keyboard Shortcuts</title>
+  <title>Toetscombinaties</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Discover keyboard shortcuts for common commands in Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
@@ -50,7 +50,7 @@
       <td>Ga naar het volgende ongelezen artikel.</td>
     </tr>
     <tr>
-      <td>r <i>or</i> u</td>
+      <td>r <i>of</i> u</td>
       <td>Schakel de geselecteerde artikelen tussen gelezen en ongelezen.</td>
     </tr>
     <tr>
@@ -66,7 +66,7 @@
       <td>Toon het volgende bekeken artikel of webpagina.</td>
     </tr>
     <tr>
-      <td>Left</td>
+      <td>Pijl naar links</td>
       <td>Moves the focus to the folder list if it is currently in the article list.</td>
     </tr>
     <tr>
@@ -98,7 +98,7 @@
       <td>Maak een nieuw abonnement aan.</td>
     </tr>
     <tr>
-      <td>Shift-Command-G</td>
+      <td>⇧⌘G</td>
       <td>Create a group folder.</td>
     </tr>
     <tr>
@@ -258,7 +258,7 @@
       <td>Toon het volgende tab venster.</td>
     </tr>
     <tr>
-      <td>Command-Y</td>
+      <td>⌘Y</td>
       <td>Opens the article list tab.</td>
     </tr>
     <tr>
