--- a/Vienna Help/Resources/de.lproj/keyboard.html
+++ b/Vienna Help/Resources/de.lproj/keyboard.html
@@ -3,24 +3,24 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Tastatur-Kürzel</title>
+  <title>Tastaturkurzbefehle</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Discover keyboard shortcuts for common commands in Vienna." />
+  <meta name="description" content="Entdecke Tastaturkurzbehfehle für häufige Aufgaben in Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Tastatur-Kürzel</span>
-  <p>Ein Großteil der Funktionen in Vienna können über die Tastatur ausgeführt werden. Die notwendigen Tastatür-Kürzel werden im Menü neben dem jeweiligen Befehl angezeigt und werden im Folgenden beschrieben. Viele Bedienelemente in Vienna verfügen ausserdem über Kontext-Menüs, die durch einen Rechtsklick beziehungsweise durch Klicken und halten von Steuerung aktiviert werden können. You can use your keyboard to quickly accomplish many tasks in Vienna. To find the shortcuts for common Befehls, look in the menus (or see the list at the bottom of this page). Many items in Vienna such as the folder pane and the article list pane also have contextual menus. To see a contextual menu, press the Steuerung key and click the item.</p>
-  <p>Um eine Funktion auszuführen, drücken sie die unten aufgeführten Tastenkombinationen.</p>
+  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Tastaturkurzbefehle</span>
+  <p>Du kannst mit deiner Tastatur viele Aufgaben in Vienna schnell erledigen. Die Tastenkombinationen für häufig verwendete Befehle findest du in den Menüs in der Menüleiste sowie in der Liste unten. Viele Elemente in Vienna, wie beispielsweise der Ordnerbereich und der Artikellistenbereich, verfügen auch über Kontextmenüs, die durch einen Rechtsklick auf das Element beziehungsweise durch das Drücken und Halten der Control-Taste und einen Linksklick auf das Element angezeigt werden können.</p>
+  <p>Um eine Aufgabe auszuführen, drücke die unten aufgeführten Kurzbefehle.</p>
   <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
     <tr>
-      <td width="215" class="greyed"><b>Key</b></td>
-      <td width="462" class="greyed"><b>Action</b></td>
+      <td width="215" class="greyed"><b>Kurzbefehl</b></td>
+      <td width="462" class="greyed"><b>Aktion</b></td>
     </tr>
   </table>
   <table width="662" border="0" cellspacing="10">
     <tr>
-      <td width="200"><b>Ein-Tasten-Kürzel</b></td>
+      <td width="200"><b>Einzeltastenkurzbefehle</b></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
@@ -48,7 +48,7 @@
       <td>Moves to the next unread article.</td>
     </tr>
     <tr>
-      <td>r <i>or</i> u</td>
+      <td>r <i>oder</i> u</td>
       <td>Markiert die ausgewählten Artikel also gelesen.</td>
     </tr>
     <tr>
@@ -56,23 +56,23 @@
       <td>Markiert den aktuellen Ordner als gelesen und springt zum nächstne.</td>
     </tr>
     <tr>
-      <td>&lt;</td>
+      <td>&lt; oder Komma (,)</td>
       <td>Zeigt den vorigen Artikel oder die vorige Webseite.</td>
     </tr>
     <tr>
-      <td>&gt;</td>
+      <td>&gt; oder Punkt (.)</td>
       <td>Zeigt den nächsten Artikel oder die nächste Webseite.</td>
     </tr>
     <tr>
-      <td>Left</td>
+      <td>Linkspfeil</td>
       <td>Moves the focus to the folder list if it is currently in the article list.</td>
     </tr>
     <tr>
-      <td>Spacebar</td>
+      <td>Leertaste</td>
       <td>Springt zum nächsten ungelesen Artikel. Falls der momentane Artikel noch nicht bis zum Ende gescrollt ist, springt die Anzeige des momentanen Artikels um eine Seite.</td>
     </tr>
     <tr>
-      <td>Enter</td>
+      <td>Zeilenschalter</td>
       <td>Öffnet die permanente Webadresse des momentanen Artikels.</td>
     </tr>
     <tr>
@@ -80,15 +80,15 @@
       <td>Verschiebt die ausgewählten Artikel in den Papierkorb. Wenn die Taste im Papierkorb gedrückt wird, werden alle darin liegenden Artikel permanente gelöscht.</td>
     </tr>
     <tr>
-      <td width="200"><b>Allgemeine Tastatur-Kürzel</b></td>
+      <td width="200"><b>Allgemeine Kurzbefehle</b></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>Alt-Click</td>
+      <td>Wahltaste-Klick</td>
       <td>Open the clicked link, overriding your preference for opening links in external browser.</td>
     </tr>
     <tr>
-      <td>Shift-Command-B</td>
+      <td>Umschalt-Befehl-B</td>
       <td>Opens the filter bar.</td>
     </tr>
     <tr>
@@ -96,55 +96,55 @@
       <td>Ein neues Abonnement erstellen.</td>
     </tr>
     <tr>
-      <td>Shift-Command-G</td>
+      <td>Umschalt-Befehl-G</td>
       <td>Create a group folder.</td>
     </tr>
     <tr>
-      <td>Shift-Command-F</td>
+      <td>Umschalt-Befehl-F</td>
       <td>Create a smart folder.</td>
     </tr>
     <tr>
-      <td>Shift-Command-E</td>
+      <td>Umschalt-Befehl-E</td>
       <td>Edit the selected folder URL or edit a smart folder criteria.</td>
     </tr>
     <tr>
-      <td>Shift-Command-D</td>
+      <td>Umschalt-Befehl-D</td>
       <td>Delete the selected folder.</td>
     </tr>
     <tr>
-      <td>Command-C</td>
+      <td>Befehl-C</td>
       <td>Copies the selected text to the clipboard. If the focus is on an article, it copies the article details to the clipboard.</td>
     </tr>
     <tr>
-      <td>Command-H</td>
+      <td>Befehl-H</td>
       <td>Hides the Vienna main window.</td>
     </tr>
     <tr>
-      <td>Alt-Command-H</td>
+      <td>Wahl-Befehl-H</td>
       <td>Hides all other application windows but keeps the Vienna main window visible.</td>
     </tr>
     <tr>
-      <td>Command-I</td>
+      <td>Befehl-I</td>
       <td>Displays the Info window for the selected folder.</td>
     </tr>
     <tr>
-      <td>Command-L</td>
+      <td>Befehl-L</td>
       <td>Puts the focus on the address bar of the current tab. Or if no browser is open and has the focus, opens a new tab and puts the focus on the address bar.</td>
     </tr>
     <tr>
-      <td>Shift-Command-N</td>
+      <td>Umschalt-Befehl-N</td>
       <td>Rename the selected folder.</td>
     </tr>
     <tr>
-      <td>Command-R</td>
+      <td>Befehl-R</td>
       <td>Alle Abonnements aktualisieren.</td>
     </tr>
     <tr>
-      <td>Shift-Befehl-R</td>
+      <td>Umschalt-Befehl-R</td>
       <td>Nur die ausgewählten Abonnements aktualisieren.</td>
     </tr>
     <tr>
-      <td>Control-Command-S</td>
+      <td>ctrl-Befehl-S</td>
       <td>den momentanen Aktualisierungsvorgang abbrechen.</td>
     </tr>
     <tr>
@@ -152,11 +152,11 @@
       <td>Die ausgewählten Artikel drucken.</td>
     </tr>
     <tr>
-      <td>Shift-Befehl-P</td>
+      <td>Umschalt-Befehl-P</td>
       <td>Seite einrichten.</td>
     </tr>
     <tr>
-      <td>Command-Q</td>
+      <td>Befehl-Q</td>
       <td>Exit Vienna.</td>
     </tr>
     <tr>
@@ -168,83 +168,83 @@
       <td>Springt zum nächsten ungelesen Artikel.</td>
     </tr>
     <tr>
-      <td>Command-Z</td>
+      <td>Befehl-Z</td>
       <td>Undoes the last action, if it can be undone.</td>
     </tr>
     <tr>
-      <td>Command-/</td>
+      <td>Befehl-Schrägstrich (/)</td>
       <td>Toggles the status bar on or off.</td>
     </tr>
     <tr>
-      <td>Command-+</td>
+      <td>Befehl-Plus-Zeichen (+)</td>
       <td>Increases the size of the text in the current article or web page.</td>
     </tr>
     <tr>
-      <td>Befehl-Minus</td>
+      <td>Befehl-Minus-Zeichen (–)</td>
       <td>Decreases the size of the text in the current article or web page.</td>
     </tr>
     <tr>
-      <td>Command-,</td>
+      <td>Befehl-Komma (,)</td>
       <td>Opens the Vienna preferences panel.</td>
     </tr>
     <tr>
-      <td>Alt-Command-Backspace</td>
+      <td>Wahl-Befehl-Rückschritt</td>
       <td>Empties the trash folder after prompting for confirmation.</td>
     </tr>
     <tr>
-      <td>Befehl-?</td>
+      <td>Befehl-Fragezeichen (?)</td>
       <td>Aufrufen der Vienna-Hilfe.</td>
     </tr>
     <tr>
-      <td><b>Artikelbezogene Tastatur-Kürzel</b></td>
+      <td><b>Artikelkurzbefehle</b></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>Alt-Enter/Alt-Return</td>
+      <td>Wahl-Zeilenschalter</td>
       <td>Opens the selected article's original web page, overriding your preference for opening links in external browser.</td>
     </tr>
     <tr>
-      <td>Shift-Command-Z</td>
+      <td>Umschalt-Befehl-Z</td>
       <td>Redo the last action, if it was previously undone.</td>
     </tr>
     <tr>
-      <td>Shift-Befehl-M</td>
+      <td>Umschalt-Befehl-M</td>
       <td>Markiert die ausgewählten Artikel.</td>
     </tr>
     <tr>
-      <td>Shift-Command-U</td>
+      <td>Umschalt-Befehl-U</td>
       <td>Markiert die ausgewählten Artikel als gelesen.</td>
     </tr>
     <tr>
-      <td>Alt-Command-S</td>
+      <td>Wahl-Befehl-S</td>
       <td>Uses your default mail application to send a link to the current article by e-mail.</td>
     </tr>
     <tr>
-      <td>Shift-Command-S</td>
+      <td>Umschalt-Befehl-S</td>
       <td>Marks the current folder read then skips to the next folder with unread articles.</td>
     </tr>
     <tr>
-      <td>Shift-Command-O</td>
+      <td>Umschalt-Befehl-O</td>
       <td>Restores an article from the trash back to its original folder.</td>
     </tr>
     <tr>
-      <td>Shift-Befehl-K</td>
+      <td>Umschalt-Befehl-K</td>
       <td>Markiert alle ausgewählten Artikel als gelesen.</td>
     </tr>
     <tr>
-      <td>Alt-Command-K</td>
+      <td>Wahl-Befehl-K</td>
       <td>Marks all articles in all folders read.</td>
     </tr>
     <tr>
-      <td><b>Fensterbezogene Tastatur-Kürzel</b></td>
+      <td><b>Fensterkurzbefehle</b></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Befehl-W</td>
-      <td>Schließt das aktuellen Tab. Falls kein Tab aktiv ist, wird das Hauptfenster geschlossen.</td>
+      <td>Schließt den aktuellen Tab. Falls kein Tab aktiv ist, wird das Hauptfenster geschlossen.</td>
     </tr>
     <tr>
-      <td>Alt-Befehl-W</td>
+      <td>Wahl-Befehl-W</td>
       <td>Schließt alle Tabs.</td>
     </tr>
     <tr>
@@ -252,7 +252,7 @@
       <td>Springt zum vorigen Tab.</td>
     </tr>
     <tr>
-      <td>Steuerung-Befehl-Rechte Pfeiltaste</td>
+      <td>ctrl-Befehl-Rechtspfeil</td>
       <td>Springt zum nächsten Tab.</td>
     </tr>
     <tr>
@@ -276,7 +276,7 @@
       <td>Aktiviert das "Geladene Dateien"-Fenster.</td>
     </tr>
     <tr>
-      <td><b>Browserbezogene Tastatur-Kürzel</b></td>
+      <td><b>Browserkurzbefehle</b></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
@@ -284,15 +284,15 @@
       <td>Aktualisiert die momentanen Webseite.</td>
     </tr>
     <tr>
-      <td>Befehl-Punkt</td>
+      <td>Befehl-Punkt (.)</td>
       <td>Bricht das laden der aktuellen Webseite ab.</td>
     </tr>
     <tr>
-      <td>Befehl-[</td>
+      <td>Befehl-linke eckige Klammer ([)</td>
       <td>Springt zur vorigen Webseite.</td>
     </tr>
     <tr>
-      <td>Befehl-]</td>
+      <td>Befehl-rechte eckige Klammer (])</td>
       <td>Springt zur nächsten Webseite.</td>
     </tr>
     <tr>
