--- a/Vienna Help/Resources/fr.lproj/advanced.html
+++ b/Vienna Help/Resources/fr.lproj/advanced.html
@@ -5,13 +5,13 @@
 <head>
   <title>Réglages avancés</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Explains advanced settings in Vienna." />
+  <meta name="description" content="Explique le panneau des réglages avancés de Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <a id="AdvancedSettingsSection" name="AdvancedSettingsSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Réglages Avancés</span>
-  <p>Le panneau Advancé des Préférences proposes des options pour changer des réglages très spécifiques de Vienna qui ne sont pas essentiels pour une utilisation classique, mais qui peuvent résoudre des problèmes comme ceux traités par le forum de Support. Cette page détaille les réglages avancés et les fonction.</p>
+  <p>Le panneau Avancés des Réglages propose des options pour changer des réglages très spécifiques de Vienna qui ne sont pas essentiels pour une utilisation classique, mais qui peuvent résoudre des problèmes comme ceux traités par le forum de Support. Cette page détaille les réglages avancés et les fonctions.</p>
   <h2><b>Activer JavaScript dans le navigateur interne</b></h2>
-  <p>Active ou désactive le support de script JavaScript dans le navigateur interne de Vienna internal. Est activé par défaut. En décochant ce réglage, le code JavaScript des pages Web ne sera pas éxécuté. Cela peut résoudre des problèmes avec les pages qui utilisent des scripts pour afficher des fenêtres ou d'autre comportement inattendus, mais cela peut aussi rendre l'affichage de page incomplet ou créer des disfonctionnement.</p>
+  <p>Active ou désactive le support de script JavaScript dans le navigateur interne de Vienna. Est activé par défaut. En décochant ce réglage, le code JavaScript des pages Web ne sera pas exécuté. Cela peut résoudre des problèmes avec les pages qui utilisent des scripts pour afficher des fenêtres ou d'autre comportement inattendus, mais cela peut aussi rendre l'affichage de page incomplet ou créer des dysfonctionnements.</p>
 </body>
 </html>
