--- a/Vienna Help/Resources/fr.lproj/intro.html
+++ b/Vienna Help/Resources/fr.lproj/intro.html
@@ -5,7 +5,7 @@
 <head>
   <title>Introduction à Vienna</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Learn how to get started with Vienna." />
+  <meta name="description" content="Apprenez comment commencer à utiliser Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -18,7 +18,7 @@
   <p>Si vous connaissez le nom d'utilisateur d'un bloggueur inscrit sur LiveJournal, Blogger, MSN Spaces ou Xanga alors Vienna fournit un moyen aisé de souscrire à son flux. Pressez Commande+N ou choisissez la commande "Nouvel abonnement..." à partir du menu Fichier. Dans le panneau qui s'affiche, sélectionnez le service de Blog dans la liste déroulante, et saisissez enfin le nom de l'utilisateur dans le champ de texte en dessous. Confirmer par le bouton "S'abonner" et Vienna ajoutera l'abonnement dans la liste des dossiers. Si vous êtes connectés à Internet au même moment, il commencera tout de suite à collecter les articles pour ce flux.</p>
   <p>Vous pouvez aussi utiliser Vienna en lien avec un compte de serveur Open Reader. Allez dans Préférences... / Syncing et activez la case "Synchroniser avec un serveur Open Reader".<br />
   Au préalable, interrogez vous sur les flux que vous lirez à travers Open Reader et ceux pour lesquels vous choisirez un accès direct. Vienna évitera de créer des doublons entre les deux catégories, mais si vous vous abonnez dans Open Reader à des flux auxquels Vienna accède directement, vous aurez des incohérences dans vos listes de lectures. Tenez en compte.<br />
-  Certains éléments sont à prendre en compte dans votre organisation :</p>
+  Certains éléments sont à prendre en compte dans votre organisation&nbsp;:</p>
   <ul>
     <li>Les flux Open Reader peuvent être synchronisés entre différents appareils et différentes applications qui supportent la synchronisation Open Reader</li>
     <li>Open Reader ne permet pas d'accéder aux flux nécessitant un nom d'utilisateur et un mot de passe</li>
