--- a/Vienna Help/Resources/sv.lproj/Vienna.html
+++ b/Vienna Help/Resources/sv.lproj/Vienna.html
@@ -4,10 +4,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="AppleTitle" content="Vienna Hilfe" />
+  <meta name="AppleTitle" content="Vienna Help" />
   <meta name="robots" content="anchors" />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
-  <title>Vienna Hilfe</title>
+  <title>Vienna hjälp</title>
 </head>
 <body>
   <a id="title-page" name="title-page"></a>
@@ -16,18 +16,18 @@
       <tr>
         <td width="130">
           <p align="center"><img src="../shared/images/Vienna-Logo.png" height="128" width="128" alt="" /></p>
-          <p class="title" align="center">Vienna Hilfe</p>
+          <p class="title" align="center">Vienna hjälp</p>
         </td>
         <td width="42"><img src="../shared/images/Vertical-Line.png" height="270" width="36" alt="" /></td>
         <td width="300">
-          <p class="header">Einleitung zu Vienna</p>
-          <p><a href="intro.html">Erste Schritte mit Vienna.</a></p>
-          <p class="header">Tastatur Kurzbefehle</p>
-          <p><a href="keyboard.html">Kurzbefehle für häufig verwendete Befehle</a></p>
-          <p class="header">Was tun?</p>
-          <p><a href="faq.html">Häufig gestellte Fragen, Support und Fehlerbeseitigung.</a></p>
-          <p class="header">Erweiterte Einstellungen</p>
-          <p><a href="advanced.html">Erklärt die Einstellmöglichkeiten in dem Tab "Erweitert" der Einstellungen.</a></p>
+          <p class="header">Introduktion till Vienna</p>
+          <p><a href="intro.html">Lär dig hur du kommer igång med Vienna.</a></p>
+          <p class="header">Kortkommandon</p>
+          <p><a href="keyboard.html">Upptäck kortkommandon för vanliga kommandon</a></p>
+          <p class="header">Hur gör jag?</p>
+          <p><a href="faq.html">Vanligt förekommande frågor, få support och felsökningssteg.</a></p>
+          <p class="header">Avancerade inställningar</p>
+          <p><a href="advanced.html">Förklarar inställningarna i Avancerade inställningar.</a></p>
         </td>
       </tr>
     </tbody>
